// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/BusyIndicator Dev 1`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  className="fd-busy-indicator fd-busy-indicator--m"
>
  <div
    className="fd-busy-indicator__circle"
  />
  <div
    className="fd-busy-indicator__circle"
  />
  <div
    className="fd-busy-indicator__circle"
  />
</div>
`;

exports[`Storyshots Component API/BusyIndicator No Styles 1`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  className="xxx-busy-indicator xxx-busy-indicator--m"
>
  <div
    className="xxx-busy-indicator__circle"
  />
  <div
    className="xxx-busy-indicator__circle"
  />
  <div
    className="xxx-busy-indicator__circle"
  />
</div>
`;

exports[`Storyshots Component API/BusyIndicator Primary 1`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  className="fd-busy-indicator fd-busy-indicator--m"
>
  <div
    className="fd-busy-indicator__circle"
  />
  <div
    className="fd-busy-indicator__circle"
  />
  <div
    className="fd-busy-indicator__circle"
  />
</div>
`;

exports[`Storyshots Component API/BusyIndicator Sizes 1`] = `
<div
  className="fddocs-container"
>
  <div
    aria-hidden="false"
    aria-label="Loading"
    className="fd-busy-indicator"
  >
    <div
      className="fd-busy-indicator__circle"
    />
    <div
      className="fd-busy-indicator__circle"
    />
    <div
      className="fd-busy-indicator__circle"
    />
  </div>
  <div
    aria-hidden="false"
    aria-label="Loading"
    className="fd-busy-indicator fd-busy-indicator--m"
  >
    <div
      className="fd-busy-indicator__circle"
    />
    <div
      className="fd-busy-indicator__circle"
    />
    <div
      className="fd-busy-indicator__circle"
    />
  </div>
  <div
    aria-hidden="false"
    aria-label="Loading"
    className="fd-busy-indicator fd-busy-indicator--l"
  >
    <div
      className="fd-busy-indicator__circle"
    />
    <div
      className="fd-busy-indicator__circle"
    />
    <div
      className="fd-busy-indicator__circle"
    />
  </div>
</div>
`;
